--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <header>
 	  <nav class="navbar fixed-top navbar-expand-lg">
 		  <div class="container">
-			  <a class="navbar-brand" href="#"><strong>Site Name</strong></a>
+			  <a class="navbar-brand" href="#">ShowMoney</a>
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menubar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				  <span class="navbar-toggler-icon"></span>
 			  </button>
@@ -41,13 +41,13 @@
 
 				  <ul class="navbar-nav">
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">Home</a>
+						  <a class="nav-link" href="/">Home</a>
 					  </li>
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">My Account</a>
+						  <a class="nav-link" href="/user">My Account</a>
 					  </li>
 					  <li class="nav-item">
-						  <a class="nav-link" href="#">Logout</a>
+						  <a class="nav-link" href="/logout">Logout</a>
 					  </li>
 				  </ul>
 			  </div>
@@ -58,18 +58,18 @@
 <!-- user panel -->
   <section id="user" class="white-text">
 	  <div class="container">
-		  <div class="row">
+		  <div class="row mb-5">
 			  <div class="col-6">
 				  <h3>My Account</h3>
-				  <p class="my-font-small">username@gmail.com</p>
+				  <p class="my-font-small" id="username"></p>
 			  </div>
 			  <div class="col-3">
 			  	<p class="my-font-small">Total Amount</p>
-				<p>$52,312.17</p>
+				<p id="total-value">$52,312.17</p>
 			  </div>
 			  <div class="col-3">
 			  	<p class="my-font-small">Available Amount</p>
-				<p>$12,342.32</p>
+				<p id="available">$12,342.32</p>
 			  </div>
 		  </div>
 		  <div class="row tabs-wrapper mt-4">
@@ -78,13 +78,10 @@
 					  <a class="my-font-small nav-link waves-light active" data-toggle="tab" href="#panel-portfolio" role="tab"><i class="fa fa-user fa-2x" aria-hidden="true"></i><br>Portfolio</a>
 				  </li>
 				  <li class="nav-item">
-					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-market" role="tab"><i class="fa fa-heart fa-2x" aria-hidden="true"></i><br>Market</a>
+					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-history" role="tab"><i class="fa fa-history fa-2x" aria-hidden="true"></i><br>History</a>
 				  </li>
 				  <li class="nav-item">
-					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-history" role="tab"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i><br>History</a>
-				  </li>
-				  <li class="nav-item">
-					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-trade" role="tab"><i class="fa fa-star fa-2x" aria-hidden="true"></i><br>Trade</a>
+					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-trade" role="tab"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i><br>Trade</a>
 				  </li>
 				  <li class="nav-item">
 					  <a class="my-font-small nav-link waves-light" data-toggle="tab" href="#panel-search" role="tab"><i class="fa fa-search fa-2x" aria-hidden="true"></i><br>Search</a>
@@ -128,7 +125,7 @@
 		          <td>%</td>
 		          <td>
 		            <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
-		            <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+		            <a class="btn btn-cyan btn-custom-small" href="#0">Sell</a>
 		          </td>
 		        </tr>
 		        <tr>
@@ -141,111 +138,55 @@
 		            <td>%</td>
 		            <td>
 		              <a class="btn btn-indigo btn-custom-small" href="#0">Chart</a>
-		              <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
+		              <a class="btn btn-cyan btn-custom-small" href="#0">Sell</a>
 		            </td>
 		        </tr>
 		      </tbody>
 		    </table>
-	  </div>
 
-	  <!-- market -->
-	  <div class="tab-pane fade in show active" id="panel-market" role="tabpanel">
-		  <h3 class="mb-5">Major Index</h3>
-		  <div class="row mb-5">
-			  <div id="chart-market" class="col-6"></div>
-			  <table class="col-6 table table-hover text-center">
-				  <thead>
-					  <tr>
-						  <th class="text-left"></th>
-						  <th>Last</th>
-						  <th>Change</th>
-						  <th>% CHG</th>
-					  </tr>
-				  </thead>
-				  <tbody>
-					  <tr>
-						  <td class="text-left">S&P 500</td>
-						  <td>0.00</td>
-						  <td>0.00</td>
-						  <td>0.00%</td>
-					  </tr>
-					  <tr>
-						  <td class="text-left">NASDAQ</td>
-						  <td>0.00</td>
-						  <td>0.00</td>
-						  <td>0.00%</td>
-					  </tr>
-					  <tr>
-						  <td class="text-left">DJIA</td>
-						  <td>0.00</td>
-						  <td>0.00</td>
-						  <td>0.00%</td>
-					  </tr>
-					  <tr>
-						  <td class="text-left">FTSE</td>
-						  <td>0.00</td>
-						  <td>0.00</td>
-						  <td>0.00%</td>
-					  </tr>
-					  <tr>
-						  <td class="text-left">NIKKEI</td>
-						  <td>0.00</td>
-						  <td>0.00</td>
-						  <td>0.00%</td>
-					  </tr>
-					  <tr>
-						  <td class="text-left">SHANGHAI</td>
-						  <td>0.00</td>
-						  <td>0.00</td>
-						  <td>0.00%</td>
-					  </tr>
-				  </tbody>
-			  </table>
-		  </div>
-
-		  <h3 class="mb-5 mt-5">Suggested Stocks</h3>
-		  <div class="row card-deck text-center">
-			  <div class="card suggested">
-				  <div class="card-body">
-					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-					  <p><span class="profit profit-fb">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-					  <div>
-						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-					  </div>
-				  </div>
-			  </div>
-			  <div class="card suggested">
-				  <div class="card-body">
-					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-					  <p><span class="profit profit-f">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-					  <div>
-						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-					  </div>
-				  </div>
-			  </div>
-			  <div class="card suggested">
-				  <div class="card-body">
-					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-					  <p><span class="profit profit-x">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-					  <div>
-						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-					  </div>
-				  </div>
-			  </div>
-			  <div class="card suggested">
-				  <div class="card-body">
-					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
-					  <p><span class="profit profit-ibm">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
-					  <div>
-						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
-						  <a class="btn btn-cyan btn-custom-small" href="#0">Trade</a>
-					  </div>
-				  </div>
-			  </div>
-		  </div>
+			<h3 class="mb-5 mt-5">Suggested Stocks</h3>
+  		  <div class="row card-deck text-center">
+  			  <div class="card suggested">
+  				  <div class="card-body">
+  					  <img src="https://www-03.ibm.com/press/us/en/attachment/20190.wss?fileId=ATTACH_FILE2&fileName=ibmpos_blue.jpg">
+  					  <p><span class="profit profit-fb">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <div>
+  						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+  						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
+  					  </div>
+  				  </div>
+  			  </div>
+  			  <div class="card suggested">
+  				  <div class="card-body">
+  					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Facebook_New_Logo_%282015%29.svg/2000px-Facebook_New_Logo_%282015%29.svg.png">
+  					  <p><span class="profit profit-f">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <div>
+  						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+  						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
+  					  </div>
+  				  </div>
+  			  </div>
+  			  <div class="card suggested">
+  				  <div class="card-body">
+  					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/USS.svg/1200px-USS.svg.png">
+  					  <p><span class="profit profit-x">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <div>
+  						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+  						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
+  					  </div>
+  				  </div>
+  			  </div>
+  			  <div class="card suggested">
+  				  <div class="card-body">
+  					  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Ford_Motor_Company_Logo.svg/2000px-Ford_Motor_Company_Logo.svg.png">
+  					  <p><span class="profit profit-ibm">0.00%</span><i class="fa fa-arrow-circle-down"></i></p>
+  					  <div>
+  						  <a class="btn btn-indigo btn-custom-small" href="#0">Detail</a>
+  						  <a class="btn btn-cyan btn-custom-small" href="#0">Buy</a>
+  					  </div>
+  				  </div>
+  			  </div>
+  		  </div>
 	  </div>
 
 	  <!-- history -->
@@ -368,11 +309,11 @@
     <div class="container text-md-left">
       <div class="row">
         <div class="col-md-8">
-          <h5>Site Name</h5>
+          <h5 class="navbar-brand">ShowMoney</h5>
           <p class="pr-5">Lorem ipsum dolor sit amet, mandamus consequuntur pri at, augue tollit accommodare duo at. In posse semper quo, brute munere mnesarchum ad his. Oportere consulatu qui eu. Ad modus porro mundi per. </p>
         </div>
         <div class="col-md-4">
-          <h5>References</h5>
+          <h5 class="mb-3">References</h5>
           <ul class="list-unstyled">
             <li>
               <a href="#!">MDBootstrap</a>
@@ -389,7 +330,7 @@
           </ul>
         </div>
         <div class="col-md-12 pb-5">
-          <hr style="background-color:grey">
+          <hr style="background-color:white">
           <a href="https://github.com/smalldoorman/show-me-the-money">Github Repository</a>
         </div>
       </div>
@@ -410,7 +351,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
 
   <!-- Custom JavaScript -->
-  <script src="javascript/app.js"></script>
   <script src="javascript/chart.js"></script>
 </body>
 </html>
